Footer bar teruggezet met een knopje :)

--- a/webapp/view/14834444218106545_S0.view.xml
+++ b/webapp/view/14834444218106545_S0.view.xml
@@ -18,6 +18,12 @@
                 </m:headerToolbar>
             </m:List>
         </m:content>
-        <m:headerContent/>
+        <m:footer>
+            <m:OverflowToolbar design="Auto">
+				<m:ToolbarSpacer/>
+				<m:OverflowToolbarButton text="Add" icon="sap-icon://add"/>
+            </m:OverflowToolbar>
+        </m:footer>
+      <m:headerContent/>
     </m:Page>
 </mvc:View>
