DELETE icon erbij gezet in eigen branch !!

--- a/webapp/view/14834444218106545_S0.view.xml
+++ b/webapp/view/14834444218106545_S0.view.xml
@@ -22,6 +22,7 @@
             <m:OverflowToolbar design="Auto">
 				<m:ToolbarSpacer/>
 				<m:OverflowToolbarButton text="Add" icon="sap-icon://add"/>
+				<m:OverflowToolbarButton text="Del" icon="sap-icon://delete"/>
             </m:OverflowToolbar>
         </m:footer>
       <m:headerContent/>
